remove console.log and fix laptop placement on mobile

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -77,6 +77,7 @@
         animation: floatLaptop 4s ease-in-out infinite;
   
         @media screen and (max-width: $break-small) {
+          margin: -40% 0 0;
           width: 200px;
         }
         @media screen and (max-width: 320px) {
